Document property edit works now!